Refactors pagination code

--- a/src/css/pagination.css
+++ b/src/css/pagination.css
@@ -41,3 +41,10 @@
 .pageNumbers li.button:focus{
     outline: none;
 }
+
+.page-navigation {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
