--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,7 +14,9 @@
 }
 
 .App-header {
-  background-color: black;
+  background-color:rgb(253, 125, 36);
+  font-family: 'Alumni Sans Pinstripe', sans-serif;
+  font-weight: 200;
   display: flex;
   flex-direction: column;
   align-items: center;
