--- a/src/css/page-controls.css
+++ b/src/css/page-controls.css
@@ -1,21 +1,32 @@
+.page-navigation {
+    justify-content: center;
+}
+
+.page-controls-container {
+    padding-right:1rem;
+    padding-left:1rem;
+}
+
 button {
     background-color:black;
     color:white;
     border-style: none;
     border-radius: 5px;
     width:5rem;
-    margin-left:10px;
-    margin-right:10px;
     height:2rem;
     font-family: 'Alumni Sans Pinstripe', sans-serif;
-    font-size:1em;
+    font-size:1.25em;
 }
 
 .page-number-container {
     display:flex;
-    margin-left:50%;
-    margin-right:50%;
     font-size: 1.5em;
+    justify-content: center;
+    
+}
+
+.page-number {
+    margin-right:.5em;
 }
 
 .page-number#active {
