--- a/src/css/page-controls.css
+++ b/src/css/page-controls.css
@@ -7,6 +7,11 @@
     padding-left:1rem;
 }
 
+.button-container {
+    display:flex;
+    justify-content: space-evenly;
+}
+
 button {
     background-color:black;
     color:white;
@@ -15,6 +20,7 @@ button {
     width:5rem;
     height:2rem;
     font-family: 'Alumni Sans Pinstripe', sans-serif;
+    font-weight:bold;
     font-size:1.25em;
 }
 
@@ -27,6 +33,7 @@ button {
 
 .page-number {
     margin-right:.5em;
+    font-weight: 200;
 }
 
 .page-number#active {
